--- a/app/src/main/res/layout/article_container.xml
+++ b/app/src/main/res/layout/article_container.xml
@@ -6,6 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/teal_200"
@@ -13,6 +14,7 @@
 
 >
         <ImageView
+
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="5dp"
