--- a/app/src/main/res/layout/article_container.xml
+++ b/app/src/main/res/layout/article_container.xml
@@ -18,7 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="200dp"
             android:layout_marginTop="5dp"
-            android:src="@drawable/tesla"
+            android:background="@color/black"
             android:id="@+id/image"/>
 
         <TextView
